fixtures/invalid/computed-dynamic-fail-closed/src/core/public.ts
let moduleName = "./local";
export const loadValue = import(moduleName);
